# Quant_App

./: .gitignore  CLAUDE.MD  MARKET_DATA.md  pyproject.toml  run.sh
docs/: CHART_ARCHITECTURE.md  PORTFOLIO.md
src/app/: main.py  ui_main_window.py
src/app/core/: config.py  theme_manager.py
src/app/services/: __init__.py  backfill_tracker.py  benchmark_returns_service.py  binance_data.py  bitcoin_historical_prices.csv  chart_settings_manager.py  indicator_service.py  ishares_holdings_service.py  live_bar_aggregator.py  market_data.py  market_data_cache.py  massive_websocket.py  polygon_data.py  portfolio_data_service.py  returns_data_service.py  statistics_service.py  theme_stylesheet_service.py  ticker_metadata_service.py  ticker_name_cache.py  yahoo_finance_service.py
src/app/ui/: hub_window.py
src/app/ui/modules/: placeholder_modules.py  settings_module.py
src/app/ui/modules/chart/: chart_module.py
src/app/ui/modules/monte_carlo/: __init__.py  monte_carlo_module.py
src/app/ui/modules/performance_metrics/: __init__.py  performance_metrics_module.py
src/app/ui/modules/portfolio_construction/: PORTFOLIO.md  __init__.py  (+1 more)
src/app/ui/widgets/: __init__.py  chart_controls.py  chart_settings_dialog.py  create_indicator_dialog.py  depth_chart.py  home_screen.py  module_tile.py  module_tile_grid.py  order_book_ladder.py  price_chart.py  section_tab_bar.py
src/app/utils/: formatters.py  market_hours.py  screenshot_manager.py
src/app/widgets/: price_chart.py
src/qt_investing_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+83 files in other folders)
