[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qt-investing-app"
version = "0.1.0"
description = "Qt-based investing, valuation, and backtesting desktop app"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.6",
  "yfinance>=0.2",
  "pandas>=2.0",
  "numpy>=1.24",
  "pyqtgraph>=0.13",
  "pyarrow>=14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]